Alfred Grimhand's Barcrawl: Separate getting started & Drinking step
This makes it easier to add the barcrawl card as a requirement for the drinking steps